# libopengdesktop

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  gtk-doc.make  libopengdesktop.pc.in
doc/reference/: Makefile.am  libopengdesktop-docs.sgml  libopengdesktop-sections.txt  version.xml.in
examples/: browser.c  categories.c  categories_async.c  contents.c  contents_async.c  save_remove_content.c  status.c
libopengdesktop/: Makefile.am  ogd-activity.c  ogd-activity.h  ogd-category.c  ogd-category.h  ogd-comment.c  ogd-comment.h  ogd-content.c  ogd-content.h  ogd-errors.h  ogd-event.c  ogd-event.h  ogd-folder.c  ogd-folder.h  ogd-iterator.c  ogd-iterator.h  ogd-message.c  ogd-message.h  ogd-object.c  ogd-object.h  ogd-person.c  ogd-person.h  ogd-private-utils.c  ogd-private-utils.h  ogd-provider-private.h  ogd-provider.c  ogd-provider.h  ogd.h
